Refined hyperparamter-tuning

--- a/experiments/hyperparameter_optimization.ipynb
+++ b/experiments/hyperparameter_optimization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,18 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-03-17 13:45:19,295] A new study created in memory with name: no-name-022f0505-da72-476b-b721-38a0e34b74e9\n",
-      "[I 2024-03-17 13:48:57,112] Trial 0 finished with value: -0.9773205825228116 and parameters: {'max_depth': 4, 'eta': 0.1621228208753755, 'subsample': 0.8, 'colsample_bytree': 0.8}. Best is trial 0 with value: -0.9773205825228116.\n",
-      "[I 2024-03-17 13:53:56,724] Trial 1 finished with value: -0.4435390041125549 and parameters: {'max_depth': 6, 'eta': 0.14516580413734517, 'subsample': 0.8, 'colsample_bytree': 0.8}. Best is trial 1 with value: -0.4435390041125549.\n",
-      "[I 2024-03-17 13:59:52,559] Trial 2 finished with value: -0.0645182095263273 and parameters: {'max_depth': 8, 'eta': 0.2636706431797748, 'subsample': 0.8, 'colsample_bytree': 0.8}. Best is trial 2 with value: -0.0645182095263273.\n",
-      "Exception ignored on calling ctypes callback function: <bound method DataIter._next_wrapper of <xgboost.data.SingleBatchInternalIter object at 0x161bc4c80>>\n",
+      "[I 2024-03-17 14:34:10,073] A new study created in memory with name: no-name-13ccb72c-a616-45fd-8d3f-164fc916070a\n",
+      "[I 2024-03-17 14:37:33,521] Trial 0 finished with value: -1.8666428087360258 and parameters: {'max_depth': 3, 'eta': 0.0534291869972452, 'subsample': 0.9, 'colsample_bytree': 0.8}. Best is trial 0 with value: -1.8666428087360258.\n",
+      "[I 2024-03-17 14:41:30,688] Trial 1 finished with value: -0.5112922101791915 and parameters: {'max_depth': 4, 'eta': 0.3528541350362156, 'subsample': 0.8, 'colsample_bytree': 0.7}. Best is trial 1 with value: -0.5112922101791915.\n",
+      "Exception ignored on calling ctypes callback function: <bound method DataIter._next_wrapper of <xgboost.data.SingleBatchInternalIter object at 0x17c40dc10>>\n",
       "Traceback (most recent call last):\n",
       "  File \"/Users/aghauss/Library/Caches/pypoetry/virtualenvs/playwright-trial-uIq0qThi-py3.12/lib/python3.12/site-packages/xgboost/core.py\", line 641, in _next_wrapper\n",
       "    return self._handle_exception(lambda: self.next(input_data), 0)\n",
@@ -58,12 +57,21 @@
       "  File \"/Users/aghauss/Library/Caches/pypoetry/virtualenvs/playwright-trial-uIq0qThi-py3.12/lib/python3.12/site-packages/xgboost/core.py\", line 624, in input_data\n",
       "    new, cat_codes, feature_names, feature_types = _proxy_transform(\n",
       "                                                   ^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/aghauss/Library/Caches/pypoetry/virtualenvs/playwright-trial-uIq0qThi-py3.12/lib/python3.12/site-packages/xgboost/data.py\", line 1318, in _proxy_transform\n",
-      "    arr, _ = _ensure_np_dtype(arr, arr.dtype)\n",
-      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/Users/aghauss/Library/Caches/pypoetry/virtualenvs/playwright-trial-uIq0qThi-py3.12/lib/python3.12/site-packages/xgboost/data.py\", line 176, in _ensure_np_dtype\n",
-      "    data = data.astype(dtype, copy=False)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/aghauss/Library/Caches/pypoetry/virtualenvs/playwright-trial-uIq0qThi-py3.12/lib/python3.12/site-packages/xgboost/data.py\", line 1315, in _proxy_transform\n",
+      "    arr, feature_names, feature_types = _transform_pandas_df(\n",
+      "                                        ^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/aghauss/Library/Caches/pypoetry/virtualenvs/playwright-trial-uIq0qThi-py3.12/lib/python3.12/site-packages/xgboost/data.py\", line 494, in _transform_pandas_df\n",
+      "    feature_names, feature_types = pandas_feature_info(\n",
+      "                                   ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/aghauss/Library/Caches/pypoetry/virtualenvs/playwright-trial-uIq0qThi-py3.12/lib/python3.12/site-packages/xgboost/data.py\", line 337, in pandas_feature_info\n",
+      "    is_pd_cat_dtype(dtype) or is_pa_ext_categorical_dtype(dtype)\n",
+      "    ^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/aghauss/Library/Caches/pypoetry/virtualenvs/playwright-trial-uIq0qThi-py3.12/lib/python3.12/site-packages/xgboost/data.py\", line 374, in is_pd_cat_dtype\n",
+      "    if Version(pd.__version__) >= Version(\"2.1.0\"):\n",
+      "                                  ^^^^^^^^^^^^^^^^\n",
+      "  File \"/Users/aghauss/Library/Caches/pypoetry/virtualenvs/playwright-trial-uIq0qThi-py3.12/lib/python3.12/site-packages/pandas/util/version/__init__.py\", line 341, in __init__\n",
+      "    self._version = _Version(\n",
+      "                    ^^^^^^^^^\n",
       "KeyboardInterrupt: \n"
      ]
     }
